@@ -28,7 +28,16 @@ public class Event {
     if (this.users.isEmpty()) {
       throw new IllegalArgumentException("Must have 1 or more people attending event!");
     } else {
-      this.host = this.users.get(0);
+      this.host = this.users.getFirst();
     }
+  }
+
+  /**
+   *
+   *
+   * @return
+   */
+  public Time getTime() {
+    return this.time;
   }
 }
